--- a/main.html
+++ b/main.html
@@ -10,7 +10,29 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="holder">
+		<div id="eg1">1</div>	
+		<div id="eg2">2</div>	
+		<div id="eg3">3</div>
+	</div>	
 
+	<br>
+	<br>
+	<br>
+
+
+	<div class="item">
+		<div id="eg1">1</div>
+		<div id="eg2">2</div>
+		<div id="eg3">3</div>
+		<div id="eg3">4</div>
+		<div id="eg3">5</div>
+		<div id="eg3">6</div>
+		<div id="eg3">7</div>
+	</div>
+
+	
+	
 </body>
 
 </html>
